デザインFBの修正

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -30,7 +30,7 @@
         <section class="section">
           <h1 class="head2">「麻辣湯」</h1>
           <div class="imgUnit imgR">
-            <img src="../images/about/pic1.jpg" alt="" width="180">
+            <img src="../images/about/pic1.jpg" alt="">
             <div class="txt">
               <p class="lineL mb10">麻辣湯とは、バラエティ豊富なトッピングから好きなものを選べる楽しさと、自分好みの辛さを選択出来る美味しいスープで、上海を中心に中国全土で大ブームのスープ春雨です。日本では2007年に当店が渋谷で初出店しました。<br>
                 秘伝のスープには鶏や豚のコラーゲンがたっぷり。辛いスープに入っている唐辛子のカプサイシンは脂肪を燃焼させる効果があり、ヘルシーな春雨、トッピングの野菜に含まれる食物繊維がひとつになった、究極のダイエットフードです。<br>
@@ -43,7 +43,7 @@
         <section class="section">
           <h1 class="head2">「薬膳火鍋」</h1>
           <div class="imgUnit imgR">
-            <img src="../images/about/pic2.jpg" alt="" width="180">
+            <img src="../images/about/pic2.jpg" alt="">
             <div class="txt">
               <p class="lineL mb10">麻辣湯のルーツは火鍋にあると言われており、ベースのスープは同じです。麻辣湯のスープは様々な具材を煮込み、さらに毎日継ぎ足すことで、鰻のタレのように深みのある味に育っていきます。七宝薬膳火鍋では、このスープに各種スパイスや薬膳素材を加え、麻辣湯とはまた表情の異なる味わいをお楽しみいただいております。<br>
                 これは、一般の火鍋店にはない、麻辣湯と火鍋を同じ店内で提供する当店の大きなメリットです。<br>
@@ -72,6 +72,7 @@
         </div>
       </div><!-- glNav -->
     </div>
+    <div class="copy">Copyright(c)2014 Cache-cache Co.,Ltd All Rights Reserved.</div>
   </div>
 </body>
 </html>
