--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@
         </div>
       </div><!-- glNav -->
     </div>
+    <div class="copy top">Copyright(c)<span class="year">2014</span> Cache-cache Co.,Ltd All Rights Reserved.</div>
   </div>
 </body>
 </html>
