--- a/public/shops/shibuya.html
+++ b/public/shops/shibuya.html
@@ -50,16 +50,8 @@
             <p><a href="../menu/" class="nomalLink">メニューを見る</a></p>
           </div>
           <div class="itemImg">
-            <div class="gallery">
-              <div class="main">
-                <img src="../images/shops/shibuya1.jpg" alt="">
-              </div>
-              <ul class="imgList">
-                <li><img src="../images/shops/shibuya2.jpg" alt=""></li>
-              </ul>
-            </div>
-
-          </div>
+            <img src="../images/shops/shibuya1.jpg" alt="" class="mb10">
+            <img src="../images/shops/shibuya2.jpg" alt="">
         </div>
         </section>
 
