--- a/public/shops/nanba.html
+++ b/public/shops/nanba.html
@@ -51,12 +51,7 @@
             <p><a href="https://twitter.com/cheepaomaratan" class="externalLink" target="_blank">Facebookページ</a></p>
           </div>
           <div class="itemImg">
-            <div class="gallery">
-              <div class="main">
-                <img src="../images/shops/nanba1.jpg" alt="">
-              </div>
-            </div>
-
+            <img src="../images/shops/nanba1.jpg" alt="">
           </div>
         </div>
         </section>
@@ -91,6 +86,7 @@
         </div>
       </div><!-- glNav -->
     </div>
+    <div class="copy">Copyright(c)2014 Cache-cache Co.,Ltd All Rights Reserved.</div>
   </div>
 </body>
 </html>
