--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,6 @@
   <![endif]-->
   <link rel="stylesheet" href="./styles/base.css" media="all">
 
-  <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script src="./script/base.js"></script>
 
 </head>
 <body>
@@ -48,5 +46,12 @@
     </div>
     <div class="copy top">Copyright(c)<span class="year">2014</span> Cache-cache Co.,Ltd All Rights Reserved.</div>
   </div>
+  <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="./script/base.js"></script>
+  <script>
+  $(function(){
+    topPageGallary();  
+  });
+  </script>
 </body>
 </html>
