--- a/public/menu/drink.html
+++ b/public/menu/drink.html
@@ -253,6 +253,9 @@
         </div>
       </div><!-- glNav -->
     </div>
+    <div class="copy">Copyright(c)<span class="year">2014</span> Cache-cache Co.,Ltd All Rights Reserved.</div>
   </div>
+  <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="../script/base.js"></script>
 </body>
 </html>
