--- a/public/shops/nanba.html
+++ b/public/shops/nanba.html
@@ -87,7 +87,9 @@
         </div>
       </div><!-- glNav -->
     </div>
-    <div class="copy">Copyright(c)2014 Cache-cache Co.,Ltd All Rights Reserved.</div>
+    <div class="copy">Copyright(c)<span class="year">2014</span> Cache-cache Co.,Ltd All Rights Reserved.</div>
   </div>
+  <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="../script/base.js"></script>
 </body>
 </html>
