modified for FB

--- a/public/menu/hinabe.html
+++ b/public/menu/hinabe.html
@@ -10,7 +10,7 @@
 
   <meta property="og:image" content=""/>
   <link rel="apple-touch-ico-precomposed" href="">
-  <link rel="shortlink" href="" />
+  <link rel="shortcut icon" href="../images/common/favicon.ico" />
 
   <!--[if lte IE 8 ]>
   <script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -108,7 +108,7 @@
           <section class="section">
             <h1 class="head3">七宝特製スッポン火鍋コース（要予約）<span>1名様 7,800円</span></h1>
             <div class="imgUnit imgR">
-              <img src="../images/menu/hinabe3.jpg" alt="">
+              <img src="../images/menu/hinabe5.jpg" alt="">
               <div class="txt">
                 <p class="lineL">当店では鍋料理の究極を目指し、滋養強壮の代表食材でもあるスッポンを使った唯一無二の火鍋をご用意致しました。スッポン料理が最も盛んな中国の調理技術と、”まる鍋”と呼ばれる日本のスッポン鍋の長所を融合させた、スッポンの魅力を最大限に生かした鍋です。スッポンの極上出汁を真正面から味わえる清湯スープと、さまざまな素材と合わさっても魅力を失わない、スッポンの懐の深さを堪能できる薬膳スープの2種類を楽しんでいただきます。<br>スッポンは築地「川魚小林」様より、静岡県浜松の「服部中村養鼈場」をはじめとした、季節ごとに最も品質の高い元気なスッポンを仕入れて調理直前に捌くため、2日前までの予約が必要となります。スッポンのあらゆる部位が楽しめて滋養強壮効果も満点な、究極スッポン料理をお楽しみください。</p>
               </div>
