--- a/public/menu/index.html
+++ b/public/menu/index.html
@@ -10,7 +10,7 @@
 
   <meta property="og:image" content=""/>
   <link rel="apple-touch-ico-precomposed" href="">
-  <link rel="shortlink" href="" />
+  <link rel="shortcut icon" href="../images/common/favicon.ico" />
 
   <!--[if lte IE 8 ]>
   <script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
