OG:IMG追加と微修正　中途半端

--- a/public/shops/nanba.html
+++ b/public/shops/nanba.html
@@ -8,8 +8,7 @@
   <meta name="description" content="大阪なんばパークス店についてご紹介。中国で広く親しまれているスープ春雨「麻辣湯」と「薬膳火鍋」の専門店「七宝麻辣湯」">
   <meta name="keyword" content="七宝麻辣湯,マーラータン,麻辣,マーラー,火鍋,春雨,スープ春雨">
 
-  <meta property="og:image" content=""/>
-  <link rel="apple-touch-ico-precomposed" href="">
+  <meta property="og:image" content="../images/common/ogimg.jpg"/>
   <link rel="shortcut icon" href="../images/common/favicon.ico" />
 
   <!--[if lte IE 8 ]>
