--- a/public/about/index.html
+++ b/public/about/index.html
@@ -8,8 +8,7 @@
   <meta name="description" content="「七宝麻辣湯」についてご紹介。中国で広く親しまれているスープ春雨「麻辣湯」と「薬膳火鍋」の専門店「七宝麻辣湯」">
   <meta name="keyword" content="七宝麻辣湯,マーラータン,麻辣,マーラー,火鍋,春雨,スープ春雨">
 
-  <meta property="og:image" content=""/>
-  <link rel="apple-touch-ico-precomposed" href="">
+  <meta property="og:image" content="../images/common/ogimg.jpg"/>
   <link rel="shortcut icon" href="../images/common/favicon.ico" />
 
   <!--[if lte IE 8 ]>
@@ -73,7 +72,9 @@
         </div>
       </div><!-- glNav -->
     </div>
-    <div class="copy">Copyright(c)2014 Cache-cache Co.,Ltd All Rights Reserved.</div>
+    <div class="copy">Copyright(c)<span class="year">2014</span> Cache-cache Co.,Ltd All Rights Reserved.</div>
   </div>
+  <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="../script/base.js"></script>
 </body>
 </html>
