--- a/public/company/index.html
+++ b/public/company/index.html
@@ -8,8 +8,7 @@
   <meta name="description" content="「七宝麻辣湯」を経営する株式会社カシュカシュの会社情報です。">
   <meta name="keyword" content="七宝麻辣湯,マーラータン,麻辣,マーラー,火鍋,春雨,スープ春雨">
 
-  <meta property="og:image" content=""/>
-  <link rel="apple-touch-ico-precomposed" href="">
+  <meta property="og:image" content="../images/common/ogimg.jpg"/>
   <link rel="shortcut icon" href="../images/common/favicon.ico" />
 
   <!--[if lte IE 8 ]>
