--- a/public/menu/hinabe.html
+++ b/public/menu/hinabe.html
@@ -8,8 +8,7 @@
   <meta name="description" content="薬膳火鍋のメニューをご紹介。中国で広く親しまれているスープ春雨「麻辣湯」と「薬膳火鍋」の専門店「七宝麻辣湯」">
   <meta name="keyword" content="七宝麻辣湯,マーラータン,麻辣,マーラー,火鍋,春雨,スープ春雨">
 
-  <meta property="og:image" content=""/>
-  <link rel="apple-touch-ico-precomposed" href="">
+  <meta property="og:image" content="../images/common/ogimg.jpg"/>
   <link rel="shortcut icon" href="../images/common/favicon.ico" />
 
   <!--[if lte IE 8 ]>
@@ -40,7 +39,12 @@
               <div class="txt rect">
                 <p class="lineL">豚肉、羊肉、野菜盛り合わせ、豆腐、春雨、鍋用点心、麺または雑炊、デザート</p>
                 <div class="borderUnit">
-                  具材バーから好きな具を好きなだけ！ <br>プラス900円で2時間食べ放題
+                  <p>具材バーから好きな具を好きなだけ！ <br>プラス900円で2時間食べ放題</p>
+                  <ul>
+                    <li><img src="../images/menu/hinabe2.jpg"></li>
+                    <li><img src="../images/menu/hinabe3.jpg"></li>
+                    <li><img src="../images/menu/hinabe4.jpg"></li>
+                  </ul>
                 </div>
               </div>
             </div>
