画像差し替えと不足パーツ作成

--- a/public/menu/hinabe.html
+++ b/public/menu/hinabe.html
@@ -17,7 +17,7 @@
  
  <link rel="stylesheet" href="../styles/base.css" media="all">
 </head>
-<body><!--  onload="initialize()"> -->
+<body>
   <div class="container bg2">
     <div class="contents">
       <article class="mainCont">
