--- a/public/shops/nanba.html
+++ b/public/shops/nanba.html
@@ -50,7 +50,7 @@
             <p><a href="https://twitter.com/cheepaomaratan" class="externalLink" target="_blank">Facebookページ</a></p>
           </div>
           <div class="itemImg">
-            <img src="../images/shops/nanba1.jpg" alt="">
+            <img src="../images/shops/nanba.jpg" alt="">
           </div>
         </div>
         </section>
