--- a/public/shops/shibuya.html
+++ b/public/shops/shibuya.html
@@ -49,7 +49,7 @@
             <p><a href="../menu/" class="nomalLink">メニューを見る</a></p>
           </div>
           <div class="itemImg">
-            <img src="../images/shops/shibuya1.jpg" alt="">
+            <img src="../images/shops/shibuya.jpg" alt="">
         </div>
         </section>
 
