--- a/public/menu/index.html
+++ b/public/menu/index.html
@@ -33,6 +33,60 @@
         <section class="section">
           <h1 class="head2">麻辣湯</h1>
 
+          <section class="menuUnit section">
+            <div class="menuIn">
+              <h1 class="menuHead">ヘルシーでボリュームたっぷり<br>上海生まれのスープ春雨</h1>
+              <ul class="selectStep">
+                <li>
+                  <h2 class="selectHead"><img src="../images/menu/menu_icon_1.png" alt="">好きな具材を選ぶ</h2>
+                  基本トッピンク３品＋春雨
+                  700円
+                  追加トッピンク    100円
+
+                  おすすめの組み合わせ
+                  豚肉　＋　もやし　＋　ほうれん草　＋　味玉
+豚肉　＋　もやし　＋　パクチー　＋　納豆
+豚肉　＋　しめじ　＋　青梗菜　＋　納豆
+もやし　＋　ミニトマト　＋　味玉　＋　トムヤムタン
+
+※110円アップで春雨大盛り・替玉OK
+※テイクアウトＯＫ
+
+                </li>
+                <li>
+                  <h2 class="selectHead"><img src="../images/menu/menu_icon_2.png" alt="">スープの辛さを選ぶ</h2>
+                  スープは０番から５番まで
+                  <ol>
+                    <li>
+                      ０番.【白湯】
+                      辛いのが苦手な方は、辛くない白湯で！
+                    </li>
+                    <li>
+                      1番.【ピリ辛】
+                      初めてで心配な方はピリ辛で！
+                    </li>
+                    <li>
+                      2番.【中辛】
+                      辛いは旨い！おすすめ中辛！
+                    </li>
+                    <li>
+                      3番.【大辛】
+                      やみつきの辛さ3倍！
+                    </li>
+                    <li>
+                      4番.【激辛】（プラス）100円
+                      思わず口から火をふきます！
+                    </li>
+                    <li>
+                      5番.【極辛】（プラス）100円
+                      １度はチャレンジしたい極辛！
+                    </li>
+                  </ol>
+                </li>
+              </ul>
+            </div>
+          </section>
+
           <section class="section">
             <div class="column col3">
               <div clasS="item"><div class="itemIn">
