--- a/public/shops/index.html
+++ b/public/shops/index.html
@@ -51,7 +51,7 @@
             <p><a href="https://www.facebook.com/maratan.akasaka?fref=ts" class="externalLink" target="_blank">Facebookページ</a></p>
           </div>
           <div class="itemImg">            
-            <img src="../images/shops/akasaka1.jpg" alt="">
+            <img src="../images/shops/akasaka.jpg" alt="">
           </div>
         </div>
         </section>
