--- a/public/shops/nanba.html
+++ b/public/shops/nanba.html
@@ -18,7 +18,7 @@
  <link rel="stylesheet" href="../styles/base.css" media="all">
 </head>
 <body><!--  onload="initialize()"> -->
-  <div class="container bg3">
+  <div class="container">
     <div class="contents">
       <article class="mainCont">
         <div class="section">
@@ -47,7 +47,7 @@
               <dd>不定休（なんばパークスに準ずる）</dd>
             </dl>
             <p><a href="../menu/" class="nomalLink">メニューを見る</a></p>
-            <p><a href="https://twitter.com/cheepaomaratan" class="externalLink" target="_blank">Facebookページ</a></p>
+            <p><a href="https://twitter.com/cheepaomaratan" class="externalLink" target="_blank">Twitterページ</a></p>
           </div>
           <div class="itemImg">
             <img src="../images/shops/nanba.jpg" alt="">
@@ -87,6 +87,7 @@
       </div><!-- glNav -->
     </div>
     <div class="copy">Copyright(c)<span class="year">2014</span> Cache-cache Co.,Ltd All Rights Reserved.</div>
+    <div class="bgCover"><img src="../images/common/bg3.jpg" alt=""></div>
   </div>
   <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script src="../script/base.js"></script>
