--- a/public/menu/drink.html
+++ b/public/menu/drink.html
@@ -17,8 +17,8 @@
  
  <link rel="stylesheet" href="../styles/base.css" media="all">
 </head>
-<body><!--  onload="initialize()"> -->
-  <div class="container bg2">
+<body>
+  <div class="container">
     <div class="contents">
       <article class="mainCont">
         <div class="section">
@@ -253,6 +253,7 @@
       </div><!-- glNav -->
     </div>
     <div class="copy">Copyright(c)<span class="year">2014</span> Cache-cache Co.,Ltd All Rights Reserved.</div>
+    <div class="bgCover"><img src="../images/common/bg2.jpg" alt=""></div>
   </div>
   <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script src="../script/base.js"></script>
