--- a/public/menu/hinabe.html
+++ b/public/menu/hinabe.html
@@ -18,7 +18,7 @@
  <link rel="stylesheet" href="../styles/base.css" media="all">
 </head>
 <body>
-  <div class="container bg2">
+  <div class="container">
     <div class="contents">
       <article class="mainCont">
         <div class="section">
@@ -147,6 +147,7 @@
       </div><!-- glNav -->
     </div>
     <div class="copy">Copyright(c)<span class="year">2014</span> Cache-cache Co.,Ltd All Rights Reserved.</div>
+    <div class="bgCover"><img src="../images/common/bg2.jpg" alt=""></div>
   </div>
   <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script src="../script/base.js"></script>
