menuページ修正

--- a/public/company/index.html
+++ b/public/company/index.html
@@ -35,8 +35,16 @@
             <dd>石神 秀幸</dd>
           </dl>
           <dl class="companyDataList">
+            <dt>資本金</dt>
+            <dd>1000万円</dd>
+          </dl>
+          <dl class="companyDataList">
             <dt>所在地</dt>
             <dd>東京都渋谷区桜丘町15-8 高木産業会館316</dd>
+          </dl>
+          <dl class="companyDataList">
+            <dt>電話番号</dt>
+            <dd>03-5428-3286</dd>
           </dl>
         </section>
 
