--- a/public/menu/drink.html
+++ b/public/menu/drink.html
@@ -33,7 +33,7 @@
         <section class="section">
           <h1 class="head2">ドリンク（赤坂店）</h1>
           <div class="imgUnit imgR">
-            <img src="../images/menu/drink1.jpg" alt="" width="180">
+            <img src="../images/menu/drink1.jpg" alt="">
             <div class="txt rect lineL">中国を代表する蒸留酒の白酒(パイチュウ)は、日本でも屈指の品揃え。<br>パイチュウをベースにしたオリジナルカクテルや、新鮮な野菜で作る青汁ハイ、自家製ジャムを加えた各種チューハイなど、他では飲めないオリジナルドリンクを多数取り揃え。
             </div>
           </div>
