--- a/public/menu/hinabe.html
+++ b/public/menu/hinabe.html
@@ -26,12 +26,12 @@
           <ul class="subnav">
             <li><a href="./">麻辣湯</a></li>
             <li class="cur"><a href="./hinabe.html">薬膳火鍋</a></li>
-            <li><a href="./drink.html">ドリンク（赤坂店）</a></li>
+            <li><a href="./drink.html">ドリンク</a></li>
           </ul>
         </div>
 
         <section class="section">
-          <h1 class="head2">薬膳火鍋</h1>
+          <h1 class="head2">薬膳火鍋（赤坂店・大阪なんばパークス店）</h1>
           <section class="section">
             <h1 class="head3">薬膳火鍋コース<span>1名様 3,200円</span></h1>
             <div class="imgUnit imgR">
@@ -131,7 +131,7 @@
               <ul class="sub">
                 <li><a href="./">麻辣湯</a></li>
                 <li class="cur"><a href="./hinabe.html">薬膳火鍋</a></li>
-                <li><a href="./drink.html">ドリンク（赤坂店）</a></li>
+                <li><a href="./drink.html">ドリンク</a></li>
               </ul>
             </li>
             <li><a href="../shops/">店舗情報</a></li>
