--- a/public/menu/index.html
+++ b/public/menu/index.html
@@ -26,7 +26,7 @@
           <ul class="subnav">
             <li class="cur"><a href="./">麻辣湯</a></li>
             <li><a href="./hinabe.html">薬膳火鍋</a></li>
-            <li><a href="./drink.html">ドリンク（赤坂店）</a></li>
+            <li><a href="./drink.html">ドリンク</a></li>
           </ul>
         </div>
 
@@ -38,50 +38,57 @@
               <h1 class="menuHead">ヘルシーでボリュームたっぷり<br>上海生まれのスープ春雨</h1>
               <ul class="selectStep">
                 <li>
-                  <h2 class="selectHead"><img src="../images/menu/menu_icon_1.png" alt="">好きな具材を選ぶ</h2>
-                  基本トッピンク３品＋春雨
-                  700円
-                  追加トッピンク    100円
+                  <div class="selectBox">
+                    <h2 class="selectHead"><img src="../images/menu/menu_icon_1.png" alt="">好きな具材を選ぶ</h2>
+                    <div class="charge">
+                      <div class="chargeDtl">
+                        <p>基本トッピンク３品＋春雨</p>
+                        <p class="base">700円</p>
+                        <p>追加トッピンク    100円</p>
+                      </div>
+                      <img src="../images/menu/menu_1.png" alt="" class="chargeImg">
+                    </div>
 
-                  おすすめの組み合わせ
-                  豚肉　＋　もやし　＋　ほうれん草　＋　味玉
-豚肉　＋　もやし　＋　パクチー　＋　納豆
-豚肉　＋　しめじ　＋　青梗菜　＋　納豆
-もやし　＋　ミニトマト　＋　味玉　＋　トムヤムタン
-
-※110円アップで春雨大盛り・替玉OK
-※テイクアウトＯＫ
-
+                    <dl class="topping">
+                      <dt>おすすめの組み合わせ</dt>
+                      <dd>
+                        豚肉 ＋ もやし ＋ ほうれん草 ＋ 味玉<br>豚肉 ＋ もやし ＋ パクチー ＋ 納豆<br>豚肉 ＋ しめじ ＋ 青梗菜 ＋ 納豆<br>もやし ＋ ミニトマト ＋ 味玉 ＋ トムヤムタン
+                      </dd>
+                    </dl>
+                    <p class="toppingNote">※110円アップで春雨大盛り・替玉OK <br>※テイクアウトＯＫ</p>
+                  </div>
                 </li>
                 <li>
-                  <h2 class="selectHead"><img src="../images/menu/menu_icon_2.png" alt="">スープの辛さを選ぶ</h2>
-                  スープは０番から５番まで
-                  <ol>
-                    <li>
-                      ０番.【白湯】
-                      辛いのが苦手な方は、辛くない白湯で！
-                    </li>
-                    <li>
-                      1番.【ピリ辛】
-                      初めてで心配な方はピリ辛で！
-                    </li>
-                    <li>
-                      2番.【中辛】
-                      辛いは旨い！おすすめ中辛！
-                    </li>
-                    <li>
-                      3番.【大辛】
-                      やみつきの辛さ3倍！
-                    </li>
-                    <li>
-                      4番.【激辛】（プラス）100円
-                      思わず口から火をふきます！
-                    </li>
-                    <li>
-                      5番.【極辛】（プラス）100円
-                      １度はチャレンジしたい極辛！
-                    </li>
-                  </ol>
+                  <div class="selectBox">
+                    <h2 class="selectHead"><img src="../images/menu/menu_icon_2.png" alt="">スープの辛さを選ぶ</h2>
+                    <p class="soupLead">スープは０番から５番まで</p>
+                    <ol class="soupLevel">
+                      <li>
+                        <div class="level"><span class="num">0</span><span class="txt">番.【白湯】</span></div>
+                        <div class="dsc">辛いのが苦手な方は、辛くない白湯で！</div>
+                      </li>
+                      <li>
+                        <div class="level"><span class="num">1</span><span class="txt">番.【ピリ辛】</span></div>
+                        <div class="dsc">初めてで心配な方はピリ辛で！</div>
+                      </li>
+                      <li>
+                        <div class="level"><span class="num">2</span><span class="txt">番.【中辛】</span></div>
+                        <div class="dsc">辛いは旨い！おすすめ中辛！</div>
+                      </li>
+                      <li>
+                        <div class="level"><span class="num">3</span><span class="txt">番.【大辛】</span></div>
+                        <div class="dsc">やみつきの辛さ3倍！</div>
+                      </li>
+                      <li>
+                        <div class="level"><span class="num">4</span><span class="txt">番.【激辛】（プラス）100円</span></div>
+                        <div class="dsc">思わず口から火をふきます！</div>
+                      </li>
+                      <li>
+                        <div class="level"><span class="num">5</span><span class="txt">番.【極辛】（プラス）100円</span></div>
+                        <div class="dsc">１度はチャレンジしたい極辛！</div>
+                      </li>
+                    </ol>
+                  </div>
                 </li>
               </ul>
             </div>
@@ -155,7 +162,7 @@
               <ul class="sub">
                 <li class="cur"><a href="./">麻辣湯</a></li>
                 <li><a href="./hinabe.html">薬膳火鍋</a></li>
-                <li><a href="./drink.html">ドリンク（赤坂店）</a></li>
+                <li><a href="./drink.html">ドリンク</a></li>
               </ul>
             </li>
             <li><a href="../shops/">店舗情報</a></li>
