いろいろバグ修正しました

--- a/public/menu/index.html
+++ b/public/menu/index.html
@@ -64,28 +64,46 @@
                     <p class="soupLead">スープは０番から５番まで</p>
                     <ol class="soupLevel">
                       <li>
-                        <div class="level"><span class="num">0</span><span class="txt">番.【白湯】</span></div>
-                        <div class="dsc">辛いのが苦手な方は、辛くない白湯で！</div>
+                        <div class="level">
+                          <span class="num">0</span>
+                          <div class="txt">
+                            番.【白湯】<br><span class="dsc">辛いのが苦手な方は、辛くない白湯で！</span>
+                          </div></div>
                       </li>
                       <li>
-                        <div class="level"><span class="num">1</span><span class="txt">番.【ピリ辛】</span></div>
-                        <div class="dsc">初めてで心配な方はピリ辛で！</div>
+                        <div class="level">
+                          <span class="num">1</span>
+                          <div class="txt">
+                            番.【ピリ辛】<br><span class="dsc">初めてで心配な方はピリ辛で！</span>
+                          </div></div>
                       </li>
                       <li>
-                        <div class="level"><span class="num">2</span><span class="txt">番.【中辛】</span></div>
-                        <div class="dsc">辛いは旨い！おすすめ中辛！</div>
+                        <div class="level">
+                          <span class="num">2</span>
+                          <div class="txt">
+                            番.【中辛】<br><span class="dsc">辛いは旨い！おすすめ中辛！</span>
+                          </div></div>
                       </li>
                       <li>
-                        <div class="level"><span class="num">3</span><span class="txt">番.【大辛】</span></div>
-                        <div class="dsc">やみつきの辛さ3倍！</div>
+                        <div class="level">
+                          <span class="num">3</span>
+                          <div class="txt">
+                            番.【大辛】<br><span class="dsc">やみつきの辛さ3倍！</span>
+                          </div></div>
                       </li>
                       <li>
-                        <div class="level"><span class="num">4</span><span class="txt">番.【激辛】（プラス）100円</span></div>
-                        <div class="dsc">思わず口から火をふきます！</div>
+                        <div class="level">
+                          <span class="num">4</span>
+                          <div class="txt">
+                            番.【激辛】（プラス）100円<br><span class="dsc">思わず口から火をふきます！</span>
+                          </div></div>
                       </li>
                       <li>
-                        <div class="level"><span class="num">5</span><span class="txt">番.【極辛】（プラス）100円</span></div>
-                        <div class="dsc">１度はチャレンジしたい極辛！</div>
+                        <div class="level">
+                          <span class="num">5</span>
+                          <div class="txt">
+                            番.【極辛】（プラス）100円<br><span class="dsc">１度はチャレンジしたい極辛！</span>
+                          </div></div>
                       </li>
                     </ol>
                   </div>
