--- a/public/menu/index.html
+++ b/public/menu/index.html
@@ -121,7 +121,7 @@
                   <dd>プラス110円</dd>
                   <dt>強壮白湯(0辛にオススメ！）</dt>
                   <dd>プラス110円</dd>
-                  <dt>強壮白トムヤムタン</dt>
+                  <dt>トムヤム湯</dt>
                   <dd>プラス110円</dd>
                   <dt>七宝特製担担麺 </dt>
                   <dd>870円</dd>
