--- a/public/menu/drink.html
+++ b/public/menu/drink.html
@@ -26,7 +26,7 @@
           <ul class="subnav">
             <li><a href="./">麻辣湯</a></li>
             <li><a href="./hinabe.html">薬膳火鍋</a></li>
-            <li class="cur"><a href="./drink.html">ドリンク（赤坂店）</a></li>
+            <li class="cur"><a href="./drink.html">ドリンク</a></li>
           </ul>
         </div>
 
@@ -237,7 +237,7 @@
               <ul class="sub">
                 <li><a href="./">麻辣湯</a></li>
                 <li><a href="./hinabe.html">薬膳火鍋</a></li>
-                <li class="cur"><a href="./drink.html">ドリンク（赤坂店）</a></li>
+                <li class="cur"><a href="./drink.html">ドリンク</a></li>
               </ul>
             </li>
             <li><a href="../shops/">店舗情報</a></li>
