--- a/public/menu/hinabe.html
+++ b/public/menu/hinabe.html
@@ -33,7 +33,7 @@
         <section class="section">
           <h1 class="head2">薬膳火鍋（赤坂店・大阪なんばパークス店）</h1>
           <section class="section">
-            <h1 class="head3">薬膳火鍋コース<span>1名様 3,200円</span></h1>
+            <h1 class="head3">薬膳火鍋コース<span>1名様 3,300円</span></h1>
             <div class="imgUnit imgR">
               <img src="../images/menu/hinabe1.jpg" alt="">
               <div class="txt rect">
@@ -57,7 +57,7 @@
                     <div class="itemIn">
                       <dl class="soupDataList1">
                         <dt>強壮薬膳湯<img src="../images/menu/icon_recommend.png"></dt>
-                        <dd>当帰・党参・良姜などの薬膳素材をふんだんに使用したスープ。漢方の味が強いが、慣れると止まらなくなる奥深い味。</dd>
+                        <dd>草果・党参・良姜などの薬膳素材をふんだんに使用したスープ。漢方の味が強いが、慣れると止まらなくなる奥深い味。</dd>
                       </dl>
                     </div>
                   </div>
