--- a/public/menu/index.html
+++ b/public/menu/index.html
@@ -42,9 +42,9 @@
                     <h2 class="selectHead"><img src="../images/menu/menu_icon_1.png" alt="">好きな具材を選ぶ</h2>
                     <div class="charge">
                       <div class="chargeDtl">
-                        <p>基本トッピンク３品＋春雨</p>
-                        <p class="base">700円</p>
-                        <p>追加トッピンク    100円</p>
+                        <p>基本トッピンク3品＋春雨</p>
+                        <p class="base">720円</p>
+                        <p>追加トッピンク    110円</p>
                       </div>
                       <img src="../images/menu/menu_1.png" alt="" class="chargeImg">
                     </div>
@@ -52,16 +52,17 @@
                     <dl class="topping">
                       <dt>おすすめの組み合わせ</dt>
                       <dd>
-                        豚肉 ＋ もやし ＋ ほうれん草 ＋ 味玉<br>豚肉 ＋ もやし ＋ パクチー ＋ 納豆<br>豚肉 ＋ しめじ ＋ 青梗菜 ＋ 納豆<br>もやし ＋ ミニトマト ＋ 味玉 ＋ トムヤムタン
+                        ウズラの玉子 ＋ ターサイ ＋ 豚肉<br>メカブ ＋ エビ ＋ チンゲン菜<br>フータマ ＋ モヤシ ＋ 味玉 ＋ パクチー
+<br>水餃子 ＋ トマト ＋ 肉団子 ＋ キクラゲ
                       </dd>
                     </dl>
-                    <p class="toppingNote">※110円アップで春雨大盛り・替玉OK <br>※テイクアウトＯＫ</p>
+                    <p class="toppingNote">※110円アップで春雨大盛り・替玉・中華麺への変更できます<br>※テイクアウトOK</p>
                   </div>
                 </li>
                 <li>
                   <div class="selectBox">
                     <h2 class="selectHead"><img src="../images/menu/menu_icon_2.png" alt="">スープの辛さを選ぶ</h2>
-                    <p class="soupLead">スープは０番から５番まで</p>
+                    <p class="soupLead">スープは0番から5番まで</p>
                     <ol class="soupLevel">
                       <li>
                         <div class="level">
@@ -95,14 +96,14 @@
                         <div class="level">
                           <span class="num">4</span>
                           <div class="txt">
-                            番.【激辛】（プラス）100円<br><span class="dsc">思わず口から火をふきます！</span>
+                            番.【激辛】（プラス）110円<br><span class="dsc">思わず口から火をふきます！</span>
                           </div></div>
                       </li>
                       <li>
                         <div class="level">
                           <span class="num">5</span>
                           <div class="txt">
-                            番.【極辛】（プラス）100円<br><span class="dsc">１度はチャレンジしたい極辛！</span>
+                            番.【極辛】（プラス）110円<br><span class="dsc">１度はチャレンジしたい極辛！</span>
                           </div></div>
                       </li>
                     </ol>
