--- a/public/menu/hinabe.html
+++ b/public/menu/hinabe.html
@@ -38,8 +38,9 @@
               <img src="../images/menu/hinabe1.jpg" alt="">
               <div class="txt rect">
                 <p class="lineL">豚肉、羊肉、野菜盛り合わせ、豆腐、春雨、鍋用点心、麺または雑炊、デザート</p>
+                <p class="lineL">※プラス1600円で2時間飲み放題（ラストオーダー20分前）。30分500円/人で延長可能。</p>
                 <div class="borderUnit">
-                  <p>具材バーから好きな具を好きなだけ！ <br>プラス900円で2時間食べ放題</p>
+                  <p>具材バーから好きな具を好きなだけ！ トッピング常時40種類以上！<br>プラス900円で2時間食べ放題</p>
                   <ul>
                     <li><img src="../images/menu/hinabe2.jpg"></li>
                     <li><img src="../images/menu/hinabe3.jpg"></li>
