--- a/public/menu/index.html
+++ b/public/menu/index.html
@@ -107,6 +107,7 @@
                           </div></div>
                       </li>
                     </ol>
+                    <p class="toppingNote">※6番以上、1番ごとにプラス60円で辛さ増量可能です。</p>
                   </div>
                 </li>
               </ul>
