アイコン追加

--- a/public/menu/hinabe.html
+++ b/public/menu/hinabe.html
@@ -93,15 +93,15 @@
                   <dd>豆乳ベースのスープに七宝特製の薬膳ダレを合わせたスープ。ゆるく固まった豆腐も具として楽しめる。</dd>
                 </dl>
                 <dl class="soupDataList2">
-                  <dt>素食麻辣湯</dt>
+                  <dt>素食麻辣湯<img src="../images/menu/icon_vege.png"></dt>
                   <dd>豆乳スープと薬膳ダレ、辛さとシビレが入り交じり、ベジタリアン仕様ながらパンチの効いた味わい。</dd>
                 </dl>
                 <dl class="soupDataList2">
-                  <dt>黒烏龍湯</dt>
+                  <dt>黒烏龍湯<img src="../images/menu/icon_vege.png"></dt>
                   <dd>黒ウーロン茶のほのかな苦味と薬膳が融合した、サッパリした新感覚の鍋。</dd>
                 </dl>
                 <dl class="soupDataList2">
-                  <dt>黄酒湯</dt>
+                  <dt>黄酒湯<img src="../images/menu/icon_vege.png"></dt>
                   <dd>紹興酒のコクと旨味を活かしたスープ。独特の香りが後を引く。</dd>
                 </dl>
               </div>
