--- a/public/menu/hinabe.html
+++ b/public/menu/hinabe.html
@@ -89,7 +89,7 @@
                   <dd>鶏・豚・牛をベースにしたコラーゲンたっぷりの白湯スープに、30種類以上の薬膳素材を加えたスープ。薬膳の味を控目にしたいお客様向け。</dd>
                 </dl>
                 <dl class="soupDataList2">
-                  <dt>素食湯</dt>
+                  <dt>素食湯<img src="../images/menu/icon_vege.png"></dt>
                   <dd>豆乳ベースのスープに七宝特製の薬膳ダレを合わせたスープ。ゆるく固まった豆腐も具として楽しめる。</dd>
                 </dl>
                 <dl class="soupDataList2">
