--- a/public/404.html
+++ b/public/404.html
@@ -38,13 +38,13 @@
 
       </article>
       <div class="glNav" style="padding-bottom:0;">
-        <header class="logo"><a href="../"><h1>七宝麻辣湯</h1></a></header>
+        <header class="logo"><a href="/"><h1>七宝麻辣湯</h1></a></header>
       </div><!-- glNav -->
     </div>
     <div class="copy">Copyright(c)<span class="year">2014</span> Cache-cache Co.,Ltd All Rights Reserved.</div>
-    <div class="bgCover"><img src="../images/common/bg1.jpg" alt=""></div>
+    <div class="bgCover"><img src="/images/common/bg1.jpg" alt=""></div>
   </div>
   <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script src="../script/base.js"></script>
+  <script src="/script/base.js"></script>
 </body>
 </html>
