added auto refresh @404

--- a/public/404.html
+++ b/public/404.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="refresh" content="5; URL=/">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <title>ページが存在しません | 七宝麻辣湯</title>
   <meta name="description" content="「七宝麻辣湯」についてご紹介。中国で広く親しまれているスープ春雨「麻辣湯」と「薬膳火鍋」の専門店「七宝麻辣湯」">
@@ -26,7 +27,8 @@
         </div>
 
         <section class="section">
-          <p class="taC lineL mb20">お探しのページは移動もしくは削除された可能性があります。<br><a href="/">トップページ</a>から目的のページをお探しください。</p>
+          <p class="taC lineL mb10">お探しのページは移動もしくは削除された可能性があります。<br><a href="/">トップページ</a>から目的のページをお探しください。</p>
+          <p class="taC lineL mb20">5秒後に自動的にトップページに移動します。</p>
           <p><a href="/" class="nomalLink">トップページ</a></p>
           <p><a href="/about/" class="nomalLink">七宝麻辣湯について</a></p>
           <p><a href="/menu/" class="nomalLink">麻辣湯メニュー</a></p>
