--- a/public/menu/drink.html
+++ b/public/menu/drink.html
@@ -58,7 +58,7 @@
                     <div class="txt rect">
                       <dl class="drinkDataList">
                         <dt>ブラディパリー</dt>
-                        <dd>トマトジュースをベースにリーペリンソースやタバスコを使った刺激的なカクテル。</dd>
+                        <dd>トマトジュースをベースにリーペリンソースやタバスコを使った刺激的なカクテルです。</dd>
                       </dl>
                     </div>
                   </div>
@@ -67,7 +67,7 @@
                     <div class="txt rect">
                       <dl class="drinkDataList">
                         <dt>パイチューハイ</dt>
-                        <dd>パイチュー特有の芳醇な香りに、柑橘類の中でも野性味のある香りが魅力のライムを合わせた、黄金比の新チューハイ。</dd>
+                        <dd>パイチュー特有の芳醇な香りに、柑橘類の中でも野性味のある香りが魅力のライムを合わせた、黄金比の新チューハイです。</dd>
                       </dl>
                     </div>
                   </div>
@@ -76,7 +76,7 @@
                     <div class="txt rect">
                       <dl class="drinkDataList">
                         <dt>パイピリーニャ</dt>
-                        <dd>世界中で大人気のカクテル「カイピリーニャ」をモチーフに。たっぷりのライムを潰しながら。</dd>
+                        <dd>世界中で大人気のカクテル「カイピリーニャ」をモチーフにしました。たっぷりのライムを潰しながらお楽しみください。</dd>
                       </dl>
                     </div>
                   </div>
@@ -94,7 +94,7 @@
                     <div class="txt rect">
                       <dl class="drinkDataList">
                         <dt>パイトニック</dt>
-                        <dd>パイチューの甘い芳香を、対極的なミントとライムの爽快さで照らした、清々しい飲み口。</dd>
+                        <dd>パイチューの甘い芳香を、対極的なミントとライムの爽快さで照らした、清々しい飲み口です。</dd>
                       </dl>
                     </div>
                   </div>
@@ -103,7 +103,7 @@
                     <div class="txt rect">
                       <dl class="drinkDataList">
                         <dt>パイローニ</dt>
-                        <dd>ベルモットの妖艶な香りが、華やかなパイチューの新たな一面を引き出す。</dd>
+                        <dd>ベルモットの妖艶な香りが、華やかなパイチューの新たな一面を引き出します。</dd>
                       </dl>
                     </div>
                   </div>
@@ -125,7 +125,7 @@
                     <div class="txt rect">
                       <dl class="drinkDataList">
                         <dt>レッドパイ</dt>
-                        <dd>パイチューとトマトの意外な相性。フルーティーで透明感のある味わい。</dd>
+                        <dd>パイチューとトマトの意外な相性。フルーティーで透明感のある味わいです。</dd>
                       </dl>
                     </div>
                   </div>
@@ -134,7 +134,7 @@
                     <div class="txt rect">
                       <dl class="drinkDataList">
                         <dt>パイパイン</dt>
-                        <dd>パイナップルのトロピカルな香りと、パイチューの甘く華やかな香りが溶け合った、女性におすすめのカクテル。</dd>
+                        <dd>パイナップルのトロピカルな香りと、パイチューの甘く華やかな香りが溶け合った、女性におすすめのカクテルです。</dd>
                       </dl>
                     </div>
                   </div>
@@ -143,7 +143,7 @@
                     <div class="txt rect">
                       <dl class="drinkDataList">
                         <dt>パイボール</dt>
-                        <dd>当店自慢の強炭酸水とライムを合わせた爽快なハイボール。</dd>
+                        <dd>当店自慢の強炭酸水とライムを合わせた爽快なハイボールです。</dd>
                       </dl>
                     </div>
                   </div>
@@ -152,7 +152,7 @@
                     <div class="txt rect">
                       <dl class="drinkDataList">
                         <dt>レモンパロ</dt>
-                        <dd>パイチューと抜群に相性が良い、レモンリキュールを合わせた会心のカクテル。</dd>
+                        <dd>パイチューと抜群に相性が良い、レモンリキュールを合わせた会心のカクテルです。</dd>
                       </dl>
                     </div>
                   </div>
@@ -170,7 +170,7 @@
                     <div class="txt rect">
                       <dl class="drinkDataList">
                         <dt>パイバック</dt>
-                        <dd>ジンとの相性にも引けを取らない、辛口のジンジャエールが映えるパイチューカクテル。</dd>
+                        <dd>ジンとの相性にも引けを取らない、辛口のジンジャエールが映えるパイチューカクテルです。</dd>
                       </dl>
                     </div>
                   </div>
@@ -179,7 +179,7 @@
                     <div class="txt rect">
                       <dl class="drinkDataList">
                         <dt>プラパイ</dt>
-                        <dd>プラムリキュールとパイチューを合わせた濃密なカクテル。甘いお酒が好きな方には特におすすめ。</dd>
+                        <dd>プラムリキュールとパイチューを合わせた濃密なカクテル。甘いお酒が好きな方には特におすすめです。</dd>
                       </dl>
                     </div>
                   </div>
