--- a/public/menu/hinabe.html
+++ b/public/menu/hinabe.html
@@ -58,7 +58,7 @@
                     <div class="itemIn">
                       <dl class="soupDataList1">
                         <dt>強壮薬膳湯<img src="../images/menu/icon_recommend.png"></dt>
-                        <dd>当帰・党参・良姜などの薬膳素材をふんだんに使用したスープです。強い漢方の味で、慣れると止まらなくなる奥深い味です。</dd>
+                        <dd>草果・党参・良姜などの薬膳素材をふんだんに使用したスープです。強い漢方の味で、慣れると止まらなくなる奥深い味です。</dd>
                       </dl>
                     </div>
                   </div>
