--- a/public/menu/index.html
+++ b/public/menu/index.html
@@ -23,7 +23,7 @@
       <article class="mainCont">
         <div class="section">
           <h1 class="head1">メニュー</h1>
-          <ul class="subnav">
+          <ul class="subnav wFull">
             <li class="cur"><a href="./">麻辣湯</a></li>
             <li><a href="./hinabe.html">薬膳火鍋</a></li>
             <li><a href="./drink.html">ドリンク</a></li>
