--- a/public/shops/iidabashi.html
+++ b/public/shops/iidabashi.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <title>渋谷店 | 店舗情報 | 七宝麻辣湯s</title>
-  <meta name="description" content="渋谷店についてご紹介。中国で広く親しまれているスープ春雨「麻辣湯」と「薬膳火鍋」の専門店「七宝麻辣湯」">
+  <title>飯田橋店 | 店舗情報 | 七宝麻辣湯</title>
+  <meta name="description" content="飯田橋店についてご紹介。中国で広く親しまれているスープ春雨「麻辣湯」と「薬膳火鍋」の専門店「七宝麻辣湯」">
   <meta name="keyword" content="七宝麻辣湯,マーラータン,麻辣,マーラー,火鍋,春雨,スープ春雨">
 
   <meta property="og:image" content="../images/common/ogimg.jpg"/>
@@ -25,40 +25,42 @@
           <h1 class="head1">店舗情報</h1>
           <ul class="subnav">
             <li><a href="./">赤坂店</a></li>
-            <li class="cur"><a href="./shibuya.html">渋谷店</a></li>
+            <li><a href="./shibuya.html">渋谷店</a></li>
           </ul>
           <ul class="subnav">
-            <li><a href="./iidabashi.html">飯田橋店</a></li>
+            <li class="cur"><a href="./iidabashi.html">飯田橋店</a></li>
             <li><a href="./nanba.html">大阪なんばパークス店</a></li>
           </ul>
         </div>
 
         <section class="section">
-          <h1 class="head2">渋谷店</h1>
+          <h1 class="head2">飯田橋店</h1>
           <div class="imgUnitFixed">
           <div class="item">
             <dl class="shopDataList">
               <dt>住所</dt>
-              <dd>東京都渋谷区桜丘町15-18 北沢ビル 1F</dd>
+              <dd>東京都千代田区富士見2-2-9ＯＳビル1階</dd>
               <dt>TEL/FAX</dt>
-              <dd><a href="tel:03-3780-0066" class="tel">03-3780-0066</a></dd>
+              <dd><a href="tel:03-6261-0123" class="tel">03-6261-0123</a></dd>
               <dt>アクセス</dt>
-              <dd>渋谷駅西口徒歩5分</dd>
-              <dt>営業時間</dt>
-              <dd>11:30～23:00</dd>
+              <dd>JRほか飯田橋駅より徒歩3分</dd>
+              <!-- <dt>営業時間</dt>
+              <dd>11:00～23:00</dd>
               <dt>定休日</dt>
-              <dd>年中無休</dd>
+              <dd>不定休</dd> -->
             </dl>
             <p><a href="../menu/" class="nomalLink">メニューを見る</a></p>
           </div>
           <div class="itemImg">
-            <img src="../images/shops/shibuya.jpg" alt="">
+            <img src="../images/shops/iidabashi.jpg" alt="">
+          </div>
         </div>
         </section>
 
         <div class="mapUnit">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.837624709304!2d139.70157000000003!3d35.656372000000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b59e1618d81%3A0xd0ae44fda20b1ce4!2z5LiD5a6d6bq76L6j5rmv!5e0!3m2!1sja!2sjp!4v1406095385751" width="600" height="450" frameborder="0" style="border:0"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12960.368128453805!2d139.745144!3d35.6993528!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x9fafe8f347ec5bfb!2z5LiD5a6d6bq76L6j5rmvIOmjr-eUsOapi-W6lw!5e0!3m2!1sja!2sjp!4v1461420623958" width="600" height="450" frameborder="0" style="border:0"></iframe>
         </div>
+
 
       </article>
       <div class="glNav">
@@ -71,8 +73,8 @@
             <li class="cur"><a href="../shops/">店舗情報</a>
               <ul class="sub">
                 <li><a href="./">赤坂店</a></li>
-                <li class="cur"><a href="./shibuya.html">渋谷店</a></li>
-                <li><a href="./iidabashi.html">飯田橋店</a></li>
+                <li><a href="./shibuya.html">渋谷店</a></li>
+                <li class="cur"><a href="./iidabashi.html">飯田橋店</a></li>
                 <li><a href="./nanba.html">大阪なんばパークス店</a></li>
               </ul>
             </li>
