--- a/public/shops/index.html
+++ b/public/shops/index.html
@@ -27,6 +27,9 @@
           <ul class="subnav">
             <li class="cur"><a href="./">赤坂店</a></li>
             <li><a href="./shibuya.html">渋谷店</a></li>
+          </ul>
+          <ul class="subnav">
+            <li><a href="./iidabashi.html">飯田橋店</a></li>
             <li><a href="./nanba.html">大阪なんばパークス店</a></li>
           </ul>
         </div>
@@ -72,6 +75,7 @@
               <ul class="sub">
                 <li class="cur"><a href="./">赤坂店</a></li>
                 <li><a href="./shibuya.html">渋谷店</a></li>
+                <li><a href="./iidabashi.html">飯田橋店</a></li>
                 <li><a href="./nanba.html">大阪なんばパークス店</a></li>
               </ul>
             </li>
