--- a/public/coupon/index.html
+++ b/public/coupon/index.html
@@ -23,7 +23,7 @@
       <article class="mainCont">
         <div class="section">
           <h1 class="head1">クーポン</h1>
-          <p class="lineL">麻辣湯専用クーポンです。赤坂店、渋谷店、なんばパークス店共通でご利用頂けます。</p>
+          <p class="lineL">麻辣湯専用クーポンです。全店舗共通でご利用頂けます。</p>
         </div>
 
         <section class="section">
