--- a/public/menu/hinabe.html
+++ b/public/menu/hinabe.html
@@ -31,7 +31,7 @@
         </div>
 
         <section class="section">
-          <h1 class="head2">薬膳火鍋（赤坂店・大阪なんばパークス店）</h1>
+          <h1 class="head2">薬膳火鍋（赤坂店・大阪なんばパークス店・飯田橋店）</h1>
           <section class="section">
             <h1 class="head3">薬膳火鍋コース<span>1名様 3,300円</span></h1>
             <div class="imgUnit imgR">
@@ -52,6 +52,7 @@
 
             <section class="section">
               <h1 class="head4">選べる2種類のスープ</h1>
+
               <div class="sectionInner">
                 <div class="column col2 nrwSpaceV">
                   <div class="item">
@@ -72,6 +73,7 @@
                   </div>
                 </div>
                 
+                <p class="head6">下記スープは赤坂店のみでのご提供となります。</span></p>
                 <dl class="soupDataList2">
                   <dt>酸菜湯<span>スヮンツァイタン</span></dt>
                   <dd>中国東北部では、鍋料理の材料に白菜や高菜などで「酸菜」という漬物を使う。具であると同時にスープの味付けの要となり、酸味と独特の風味がクセになる。</dd>
