--- a/public/shops/iidabashi.html
+++ b/public/shops/iidabashi.html
@@ -44,10 +44,10 @@
               <dd><a href="tel:03-6261-0123" class="tel">03-6261-0123</a></dd>
               <dt>アクセス</dt>
               <dd>JRほか飯田橋駅より徒歩3分</dd>
-              <!-- <dt>営業時間</dt>
-              <dd>11:00～23:00</dd>
+              <dt>営業時間</dt>
+              <dd>11:30～23:00</dd>
               <dt>定休日</dt>
-              <dd>不定休</dd> -->
+              <dd>年中無休</dd>
             </dl>
             <p><a href="../menu/" class="nomalLink">メニューを見る</a></p>
           </div>
