--- a/public/shops/index.html
+++ b/public/shops/index.html
@@ -15,7 +15,7 @@
   <script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
   <![endif]-->
 
-  
+
  <link rel="stylesheet" href="../styles/base.css" media="all">
 </head>
 <body>
@@ -48,12 +48,12 @@
               <dt>営業時間</dt>
               <dd>[月～土、祝]11:30～23:00　[日]18:00～23:00</dd>
               <dt>定休日</dt>
-              <dd>年中無休</dd>
+              <dd>年中無休（年末年始、お盆期間は休みの場合があります）</dd>
             </dl>
             <p><a href="../menu/" class="nomalLink">メニューを見る</a></p>
             <p><a href="https://www.facebook.com/maratan.akasaka?fref=ts" class="externalLink" target="_blank">Facebookページ</a></p>
           </div>
-          <div class="itemImg">            
+          <div class="itemImg">
             <img src="../images/shops/akasaka.jpg" alt="">
           </div>
         </div>
