--- a/public/shops/shibuya.html
+++ b/public/shops/shibuya.html
@@ -14,7 +14,7 @@
   <!--[if lte IE 8 ]>
   <script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
   <![endif]-->
- 
+
  <link rel="stylesheet" href="../styles/base.css" media="all">
 </head>
 <body><!--  onload="initialize()"> -->
@@ -47,7 +47,7 @@
               <dt>営業時間</dt>
               <dd>11:30～23:00</dd>
               <dt>定休日</dt>
-              <dd>年中無休</dd>
+              <dd>年中無休（年末年始、お盆期間は休みの場合があります）</dd>
             </dl>
             <p><a href="../menu/" class="nomalLink">メニューを見る</a></p>
           </div>
